Changes in most of the modules

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <img
                 id="headerBanner"
                 src="../../staticContent/logo_banner"
-                onclick="window.location.href='../../../dhis-web-dashboard-integration/index.action'"
+                onclick="window.location.href='../../../'"
                 style="cursor:pointer"
                 title="View home page"
             />
 
             <span
                 id="headerText"
-                onclick="window.location.href='../../../dhis-web-dashboard-integration/index.action'"
+                onclick="window.location.href='../../../'"
                 style="cursor:pointer"
                 title="View home page"
             >
